--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<div id="container">
 		<div id="box">
 		<header id="main-header">
-			<h1>Eugenio Landi</h1>
+			<h1>Site under construction - Eugenio Landi</h1>
 		</header>
 
 		<br>
