--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		</header>
 
 		<br>
-		<img id="my-img " style="border:3px solid teal;"  src="images/picture2.jpg" alt="My picture" width="200" align="right"/>
+		<img id="my-img " style="border:3px solid teal;"  src="foto.jpg" alt="My picture" width="200" align="right"/>
 		<section id="About-me">
 			<h2 style="color:teal">About me</h2>
 
@@ -70,7 +70,7 @@
 
       </p>
 			<p>
-			My <a href="CV.pdf" target="_blank">Curriculum Vitae</a>.
+			My <a href="CV_EugenioLandi-21-09-2022.pdf" target="_blank">Curriculum Vitae</a>.
 			</p>
 		</section>
 
