--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		</header>
 
 		<br>
-		<img id="my-img " style="border:3px solid teal;"  src="foto.jpg" alt="My picture" width="200" align="right"/>
+		<img id="my-img "   src="foto.jpg" alt="My picture" width="200" align="right"/>
 		<section id="About-me">
 			<h2 style="color:teal">About me</h2>
 
