--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
 		}
 		#main-header{
 			text-align:center;
-			background-color:teal;
-			color:white;
+			color:#0077aa;
 			padding:5px;
 		}
 		#About-me{
@@ -50,7 +49,7 @@
 		<br>
 		<img id="my-img "   src="foto.jpg" alt="My picture" width="200" align="right"/>
 		<section id="About-me">
-			<h2 style="color:teal">About me</h2>
+			<h2 style="color:#0077aa">About me</h2>
 
 			<p>		
 				I am currently a short term researcher and lecturer at the Eberly College of Science, Department of Mathematics, Penn State University, starting in August 2022 until December 2022.
@@ -75,7 +74,7 @@
 		</section>
 
 		<section id="research-papers">
-			<h2 style="color:teal">Research Papers</h2>	
+			<h2 style="color:#0077aa">Research Papers</h2>	
 			<ul>
         <li>An exposition of the topological half of the Grothendieck-Hirzebruch-Riemann-Roch theorem in the fancy language of spectra<br>(with Mattia Coloma and Domenico Fiorenza) Expo. Math. [DOI] [arXiv]</li>
          <li>A very short note on the (rational) graded Hori map<br>(with Mattia Coloma and Domenico Fiorenza) Commun. Algebra [DOI] [arXiv]</li>
@@ -86,7 +85,7 @@
 		</section>
 		<br>
 		<section id="Invited-Talks">
-			<h2 style="color:teal">Invited Talks</h2>
+			<h2 style="color:#0077aa">Invited Talks</h2>
 			<ul>
 				<li>18/03/2021: The Witten genus as the "volume" of the double loop space, KCL/UCL Junior Geometry seminar;</li>
 				<li>19/04/2022: Equivariant localization methods, orientations and modularity, GAP (Geometry, Algebra, Physics) Seminar;				</li>
@@ -96,7 +95,7 @@
 			</ul>
 		</section>
 <!-- 		<section id="teaching">
-			<h3 style="color:teal">Teaching</h3>
+			<h3 style="color:#0077aa">Teaching</h3>
 			<p>Teaching Assistant</p>
 			<ul>
 				<li>Department of Basic and Applied Sciences for Engineering (SBAI), Università degli studi di Roma “La Sapienza”, Clinical engineering, 2019-2020. Course: Geometry.</li>
