--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<style type="text/css">
 		body{
 			font-family:sans-serif; 
-			background-color: ghostwhite;
+			background-color: white;
 		}
 		#container {
   			width: 100%;
@@ -43,29 +43,26 @@
 		<div id="container">
 		<div id="box">
 		<header id="main-header">
-			<h1>Site under construction - Eugenio Landi</h1>
+			<h1>Eugenio Landi</h1>
 		</header>
 
 		<br>
 		<img id="my-img "   src="foto.jpg" alt="My picture" width="200" align="right"/>
 		<section id="About-me">
 			<h2 style="color:#0077aa">About me</h2>
-
-			<p>		
-				I am currently a short term researcher and lecturer at the Eberly College of Science, Department of Mathematics, Penn State University, starting in August 2022 until December 2022.
-
-				<br>
-				I obtained my Ph.D. at Università di Roma Tre under the supervision of professor Domenico Fiorenza.
-<br>
-        My research interests are algebraic topology and higher category theory.
-<br>
-        For my Ph.D. thesis, titled "Equivariant localization methods, orientations and modularity", I worked on orientations, T-duality, rational homotopy theory, TQFTs and equivariant cohomology.
-
+			<p>I am currently a short term researcher and lecturer at the Eberly College of Science, Department of Mathematics, Penn State University, starting in August 2022 until December 2022.</p>
+			<p>
+			I obtained my Ph.D. at Università di Roma Tre under the supervision of professor <a href="https://www1.mat.uniroma1.it/people/fiorenza/" target="_blank">Domenico Fiorenza</a>.
+			<br>
+       			My research interests are algebraic topology and higher category theory.
+			<br>
+        		For my Ph.D. thesis, titled "Equivariant localization methods, orientations and modularity", I worked on orientations, T-duality, rational homotopy theory, TQFTs and equivariant cohomology.
 			</p>
+			
       <p>
         You can email me at:
         <br>
-        eugenio.landi@uniroma3.it or ezl5469@psu.edu
+        <a href="mailto:eugenio.landi@uniroma3.it">eugenio.landi@uniroma3.it</a> or <a href="mailto:ezl5469@psu.edu">ezl5469@psu.edu</a>.
 
       </p>
 			<p>
@@ -76,9 +73,9 @@
 		<section id="research-papers">
 			<h2 style="color:#0077aa">Research Papers</h2>	
 			<ul>
-        <li>An exposition of the topological half of the Grothendieck-Hirzebruch-Riemann-Roch theorem in the fancy language of spectra<br>(with Mattia Coloma and Domenico Fiorenza) Expo. Math. [DOI] [arXiv]</li>
-         <li>A very short note on the (rational) graded Hori map<br>(with Mattia Coloma and Domenico Fiorenza) Commun. Algebra [DOI] [arXiv]</li>
-         <li>The (anti-)holomorphic sector in C/Λ-equivariant cohomology, and the Witten class<br>(with Mattia Coloma and Domenico Fiorenza) [arXiv] 
+        <li>An exposition of the topological half of the Grothendieck-Hirzebruch-Riemann-Roch theorem in the fancy language of spectra<br>(with Mattia Coloma and Domenico Fiorenza) Expo. Math. <a href="https://doi.org/10.1016/j.exmath.2021.11.003" target="_blank">[DOI]</a> <a href="https://arxiv.org/abs/1911.12035" target="_blank">[arXiv]</a></li>
+         <li>A very short note on the (rational) graded Hori map<br>(with Mattia Coloma and Domenico Fiorenza) Commun. Algebra <a href="https://doi.org/10.1080/00927872.2021.2005076" target="_blank">[DOI]</a> <a href="https://arxiv.org/abs/2003.13066" target="_blank">[arXiv]</a></li>
+         <li>The (anti-)holomorphic sector in C/Λ-equivariant cohomology, and the Witten class<br>(with Mattia Coloma and Domenico Fiorenza) <a href="https://arxiv.org/abs/2106.14945" target="_blank">[arXiv]</a> 
 </li>
          <li></li>
 			</ul>
@@ -87,10 +84,10 @@
 		<section id="Invited-Talks">
 			<h2 style="color:#0077aa">Invited Talks</h2>
 			<ul>
-				<li>18/03/2021: The Witten genus as the "volume" of the double loop space, KCL/UCL Junior Geometry seminar;</li>
-				<li>19/04/2022: Equivariant localization methods, orientations and modularity, GAP (Geometry, Algebra, Physics) Seminar;				</li>
+				<li>18/03/2021: The Witten genus as the "volume" of the double loop space, <a href="https://www.ucl.ac.uk/junior-geometry/2021_03_18.html" target="_blank">KCL/UCL Junior Geometry seminar</a>;</li>
+				<li>19/04/2022: Equivariant localization methods, orientations and modularity, <a href="https://math-cal.cloud.science.psu.edu/events/52949" target="_blank">GAP (Geometry, Algebra, Physics) Seminar</a>;				</li>
 				<li>10/05/2022: Lecture on Model Categories, Preparatory informal seminar on the Geometric Cobordism Hypothesis;</li>
-        <li>26/05/2022: Equivariant localization methods, orientations and modularity, First UMI meeting of PhD students. Padova.</li>
+        <li>26/05/2022: Equivariant localization methods, orientations and modularity, <a href="https://www.100umi800unipd.it/" target="_blank">First UMI meeting of PhD students. Padova</a>.</li>
 
 			</ul>
 		</section>
