--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="description" content="This is Eugenio Landi's personal webpage."/>
 		<meta name="keywords" content="Eugenio, Landi, Math, algebraic topology">
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
+		<link rel="icon" type="image/x-icon" href="/images/icon.png">
 		<style type="text/css">
 		body{
 			font-family:sans-serif; 
@@ -47,7 +48,7 @@
 		</header>
 
 		<br>
-		<img id="my-img "   src="foto.jpg" alt="My picture" width="200" align="right"/>
+		<img id="my-img "   src="images/foto.jpg" alt="My picture" width="200" align="right"/>
 		<section id="About-me">
 			<h2 style="color:#0077aa">About me</h2>
 			<p>I am currently a short term researcher and lecturer at the Eberly College of Science, Department of Mathematics, Penn State University, starting in August 2022 until December 2022.</p>
