--- a/index.html
+++ b/index.html
@@ -12,6 +12,23 @@
 			font-family:sans-serif; 
 			background-color: white;
 		}
+		a:link {
+ 		color: #0077aa;
+  		background-color: transparent;
+  		text-decoration: none;
+		}
+
+		a:visited {
+  		color: #0077aa;
+  		background-color: transparent;
+  		text-decoration: none;
+		}
+
+		a:hover {
+  		color: #0077aa;
+  		background-color: transparent;
+  		text-decoration: none;
+		}
 		#container {
   			width: 100%;
    			margin: 16px auto;
