--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="description" content="This is Eugenio Landi's personal webpage."/>
 		<meta name="keywords" content="Eugenio, Landi, Math, algebraic topology">
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
-		<link rel="icon" type="image/png" href="/images/icon.png">
+		<link rel="icon" type="image/x-icon" href="/images/icon.ico">
 		<style type="text/css">
 		body{
 			font-family:sans-serif; 
