--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 			font-family:sans-serif; 
 			background-color: white;
 		}
+		style {
+    		color: #454545;
+  		font-family: 'Arial';
+    		font-weight: normal;
+    		vertical-align: baseline;
+		font-size: 15.0pt;
+}
 		a:link {
  		color: #0077aa;
   		background-color: transparent;
