--- a/index.html
+++ b/index.html
@@ -12,13 +12,7 @@
 			font-family:sans-serif; 
 			background-color: white;
 		}
-		style {
-    		color: #454545;
-  		font-family: 'Arial';
-    		font-weight: normal;
-    		vertical-align: baseline;
-		font-size: 15.0pt;
-}
+		
 		a:link {
  		color: #0077aa;
   		background-color: transparent;
@@ -64,7 +58,13 @@
 		</style>
 	
 	</head>
-	<body class="resizable">
+	<body class="resizable" style {
+    		color: #454545;
+  		font-family: 'Arial';
+    		font-weight: normal;
+    		vertical-align: baseline;
+		font-size: 15.0pt;
+}>
 		<div id="container">
 		<div id="box">
 		<header id="main-header">
