--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 			font-family:sans-serif; 
 			background-color: white;
 		}
-		
+		{
+    		color: #454545;
+  		font-family: 'Arial';
+    		font-weight: normal;
+    		vertical-align: baseline;
+		font-size: 20.0pt;
+		}
 		a:link {
  		color: #0077aa;
   		background-color: transparent;
@@ -58,13 +64,7 @@
 		</style>
 	
 	</head>
-	<body class="resizable" style {
-    		color: #454545;
-  		font-family: 'Arial';
-    		font-weight: normal;
-    		vertical-align: baseline;
-		font-size: 15.0pt;
-}>
+	<body class="resizable">
 		<div id="container">
 		<div id="box">
 		<header id="main-header">
