--- a/index.html
+++ b/index.html
@@ -15,9 +15,16 @@
 		p {
     		color: #454545;
   		font-family: 'Arial';
-    		font-weight: normal;
+    		font-weight: 200;
     		vertical-align: baseline;
-		font-size: 20.0pt;
+		font-size: 15.0pt;
+		}
+		ul {
+    		color: #454545;
+  		font-family: 'Arial';
+    		font-weight: 200;
+    		vertical-align: baseline;
+		font-size: 15.0pt;
 		}
 		a:link {
  		color: #0077aa;
@@ -74,7 +81,7 @@
 		<br>
 		<img id="my-img "   src="images/foto.jpg" alt="My picture" width="200" align="right"/>
 		<section id="About-me">
-			<h2 style="color:#0077aa">About me</h2>
+			<h2>About me:</h2>
 			<p>I am currently a short term researcher and lecturer at the Eberly College of Science, Department of Mathematics, Penn State University, starting in August 2022 until December 2022.</p>
 			<p>
 			I obtained my Ph.D. at Università di Roma Tre under the supervision of professor <a href="https://www1.mat.uniroma1.it/people/fiorenza/" target="_blank">Domenico Fiorenza</a>.
@@ -96,7 +103,7 @@
 		</section>
 
 		<section id="research-papers">
-			<h2 style="color:#0077aa">Research Papers</h2>	
+			<h2>Research Papers:</h2>	
 			<ul>
         <li>An exposition of the topological half of the Grothendieck-Hirzebruch-Riemann-Roch theorem in the fancy language of spectra<br>(with Mattia Coloma and Domenico Fiorenza) Expo. Math. <a href="https://doi.org/10.1016/j.exmath.2021.11.003" target="_blank">[DOI]</a> <a href="https://arxiv.org/abs/1911.12035" target="_blank">[arXiv]</a></li>
          <li>A very short note on the (rational) graded Hori map<br>(with Mattia Coloma and Domenico Fiorenza) Commun. Algebra <a href="https://doi.org/10.1080/00927872.2021.2005076" target="_blank">[DOI]</a> <a href="https://arxiv.org/abs/2003.13066" target="_blank">[arXiv]</a></li>
@@ -106,7 +113,7 @@
 		</section>
 		<br>
 		<section id="Invited-Talks">
-			<h2 style="color:#0077aa">Invited Talks</h2>
+			<h2>Invited Talks:</h2>
 			<ul>
 				<li>18/03/2021: The Witten genus as the "volume" of the double loop space, <a href="https://www.ucl.ac.uk/junior-geometry/2021_03_18.html" target="_blank">KCL/UCL Junior Geometry seminar</a>;</li>
 				<li>19/04/2022: Equivariant localization methods, orientations and modularity, <a href="https://math-cal.cloud.science.psu.edu/events/52949" target="_blank">GAP (Geometry, Algebra, Physics) Seminar</a>;				</li>
@@ -116,13 +123,13 @@
 			</ul>
 		</section>
 <!-- 		<section id="teaching">
-			<h3 style="color:#0077aa">Teaching</h3>
-			<p>Teaching Assistant</p>
+			<h3 style="color:#0077aa">Teaching:</h3>
+			<p>Teaching Assistant:</p>
 			<ul>
 				<li>Department of Basic and Applied Sciences for Engineering (SBAI), Università degli studi di Roma “La Sapienza”, Clinical engineering, 2019-2020. Course: Geometry.</li>
 				<li>Department of Basic and Applied Sciences for Engineering (SBAI), Università degli studi di Roma “La Sapienza”, Building engineering, 2019-2020. Course: Geometry.</li>
 			</ul>
-<p>Lecturer</p>
+<p>Lecturer:</p>
 <ul>
 <li>Lecturer, Deparment of Mathematics, Pennsylvania State University, August 2022-December 2022. Course: Math220 - Matrices</li>
 </ul>
