--- a/index.html
+++ b/index.html
@@ -15,16 +15,19 @@
 		p {
     		color: #454545;
   		font-family: 'Arial';
-    		font-weight: 200;
+    		font-weight: 100;
     		vertical-align: baseline;
 		font-size: 15.0pt;
 		}
 		ul {
     		color: #454545;
   		font-family: 'Arial';
-    		font-weight: 200;
+    		font-weight: 100;
     		vertical-align: baseline;
 		font-size: 15.0pt;
+		}
+		h2 {
+ 		color: #0077aa;
 		}
 		a:link {
  		color: #0077aa;
@@ -122,14 +125,14 @@
 
 			</ul>
 		</section>
-<!-- 		<section id="teaching">
-			<h3 style="color:#0077aa">Teaching:</h3>
-			<p>Teaching Assistant:</p>
+<section id="teaching">
+			<h2 style="color:#0077aa">Teaching:</h2>
+			<h3>Teaching Assistant:</h3>
 			<ul>
 				<li>Department of Basic and Applied Sciences for Engineering (SBAI), Università degli studi di Roma “La Sapienza”, Clinical engineering, 2019-2020. Course: Geometry.</li>
 				<li>Department of Basic and Applied Sciences for Engineering (SBAI), Università degli studi di Roma “La Sapienza”, Building engineering, 2019-2020. Course: Geometry.</li>
 			</ul>
-<p>Lecturer:</p>
+<h3>Lecturer:</h3>
 <ul>
 <li>Lecturer, Deparment of Mathematics, Pennsylvania State University, August 2022-December 2022. Course: Math220 - Matrices</li>
 </ul>
