--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
 			font-family:sans-serif; 
 			background-color: white;
 		}
+			
 		p {
     		color: #454545;
   		font-family: 'Arial';
-    		font-weight: 100;
+    		font-weight: lighter;
     		vertical-align: baseline;
 		font-size: 15.0pt;
 		}
+			
 		ul {
     		color: #454545;
   		font-family: 'Arial';
@@ -26,9 +28,15 @@
     		vertical-align: baseline;
 		font-size: 15.0pt;
 		}
+			
 		h2 {
  		color: #0077aa;
 		}
+			
+		h3 {
+ 		color: #0077aa;
+		}
+			
 		a:link {
  		color: #0077aa;
   		background-color: transparent;
