--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
 		<meta name="keywords" content="Eugenio, Landi, Math, algebraic topology">
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<link rel="icon" type="image/x-icon" href="/images/icon.ico">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 		<style type="text/css">
 		body{
-			font-family:sans-serif; 
+			font-family:"Lato",sans-serif; 
 			background-color: white;
 		}
 			
 		p {
     		color: #454545;
-  		font-family: 'Arial';
     		font-weight: lighter;
     		vertical-align: baseline;
 		font-size: 15.0pt;
+		line-height: 1.38;
 		}
 			
 		ul {
     		color: #454545;
-  		font-family: 'Arial';
     		font-weight: 100;
     		vertical-align: baseline;
 		font-size: 15.0pt;
