--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 		body{
 			font-family:"Lato",sans-serif; 
 			background-color: white;
+				max-width: 1080px; 
+	margin: 0 auto !important; 
+	float: none !important; 
 		}
 			
 		p {
@@ -60,7 +63,7 @@
     		padding: 16px;
 		}	
 		#box {
-  			width: 800px;
+  		<!--	width: 800px;-->
   			margin-left: auto;
     		margin-right: auto;
   			
@@ -144,6 +147,7 @@
 <ul>
 <li>Lecturer, Deparment of Mathematics, Pennsylvania State University, August 2022-December 2022. Course: Math220 - Matrices</li>
 </ul>
+			</section>
 				</div>
 		</div>
 		<div style="margin-top:100px"></div>
