--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 			padding:5px;
 		}
 		#About-me{
-			margin-right:250px;
+			margin-right:40%px;
 		</style>
 	
 	</head>
@@ -93,7 +93,7 @@
 		</header>
 
 		<br>
-		<img id="my-img "   src="images/foto.jpg" alt="My picture" width="200" align="right"/>
+		<img id="my-img "   src="images/foto.jpg" alt="My picture" width="35%" align="right"/>
 		<section id="About-me">
 			<h2>About me:</h2>
 			<p>I am currently a short term researcher and lecturer at the Eberly College of Science, Department of Mathematics, Penn State University, starting in August 2022 until December 2022.</p>
