--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 		line-height: 1.38;
 		}
 			
+		h1 {
+		font-size: 60.0pt;
+		}
+			
 		ul {
     		color: #454545;
     		font-weight: 100;
@@ -93,7 +97,7 @@
 		</header>
 
 		<br>
-		<img id="my-img "   src="images/foto.jpg" alt="My picture" width="35%" align="right"/>
+		<img id="my-img "   src="images/foto.jpg" alt="My picture" width="30%" align="right"/>
 		<section id="About-me">
 			<h2>About me:</h2>
 			<p>I am currently a short term researcher and lecturer at the Eberly College of Science, Department of Mathematics, Penn State University, starting in August 2022 until December 2022.</p>
