--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 			</ul>
 <h3>Lecturer:</h3>
 <ul>
-<li>Lecturer, Deparment of Mathematics, Pennsylvania State University, August 2022-December 2022. Course: Math220 - Matrices</li>
+<li>Deparment of Mathematics, Pennsylvania State University, August 2022-December 2022. Course: Math220 - Matrices</li>
 </ul>
 			</section>
 				</div>
