--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="description" content="This is Eugenio Landi's personal webpage."/>
 		<meta name="keywords" content="Eugenio, Landi, Math, algebraic topology">
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
+		<meta name="google-site-verification" content="kb4Hsut63eAqSccZE0GE7ZVtHP64Fm-obTuqbjkoPNo" />
 		<link rel="icon" type="image/x-icon" href="/images/icon.ico">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 		<style type="text/css">
@@ -27,6 +28,7 @@
 			
 		h1 {
 		font-size: 60.0pt;
+			font-weight: 50;
 		}
 			
 		ul {
