--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Z0RXTG6637"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Z0RXTG6637');
+</script>
 		<title>Eugenio Landi</title>
 		<meta name="author" content="Eugenio Landi"/>
 		<meta name="description" content="This is Eugenio Landi's personal webpage."/>
