--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
       </p>
 			<p>
-			My <a href="CV_EugenioLandi-21-09-2022.pdf" target="_blank">Curriculum Vitae</a>.
+			My <a href="CV_EugenioLandi.pdf" target="_blank">Curriculum Vitae</a>.
 			</p>
 		</section>
 
@@ -160,7 +160,7 @@
 			</ul>
 <h3>Lecturer:</h3>
 <ul>
-<li>Deparment of Mathematics, Pennsylvania State University, August 2022-December 2022. Course: Math220 - Matrices</li>
+<li>Department of Mathematics, Pennsylvania State University, August 2022-December 2022. Course: Math220 - Matrices</li>
 </ul>
 			</section>
 				</div>
