--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 		<meta name="google-site-verification" content="kb4Hsut63eAqSccZE0GE7ZVtHP64Fm-obTuqbjkoPNo" />
 		<link rel="icon" type="image/x-icon" href="/images/icon.ico">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;1,300&display=swap" rel="stylesheet">
 		<style type="text/css">
 		body{
 			font-family:"Lato",sans-serif; 
