--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			
 		p {
     		color: #454545;
-    		font-weight: lighter;
+    		font-weight: normal;
     		vertical-align: baseline;
 		font-size: 15.0pt;
 		line-height: 1.38;
@@ -40,12 +40,12 @@
 			
 		h1 {
 		font-size: 60.0pt;
-			font-weight: 10;
+			font-weight: 100;
 		}
 			
 		ul {
     		color: #454545;
-    		font-weight: 100;
+    		font-weight: normal;
     		vertical-align: baseline;
 		font-size: 15.0pt;
 		}
