--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			
 		h1 {
 		font-size: 60.0pt;
-			font-weight: 300;
+			font-weight: lighter;
 		}
 			
 		ul {
@@ -61,7 +61,7 @@
 			
 		h3 {
  		color: #0077aa;
-		font-weight: 300;
+		font-weight: 400;
 		}
 			
 		a:link {
