--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 		<meta name="google-site-verification" content="kb4Hsut63eAqSccZE0GE7ZVtHP64Fm-obTuqbjkoPNo" />
 		<link rel="icon" type="image/x-icon" href="/images/icon.ico">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;1,300&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&display=swap" rel="stylesheet">
 		<style type="text/css">
 		body{
 			font-family:"Lato",sans-serif; 
@@ -40,7 +40,7 @@
 			
 		h1 {
 		font-size: 60.0pt;
-			font-weight: lighter;
+			font-weight: 300;
 		}
 			
 		ul {
@@ -61,7 +61,7 @@
 			
 		h3 {
  		color: #0077aa;
-		font-weight: 400;
+		font-weight: 300;
 		}
 			
 		a:link {
