--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 		<br>
 		<section id="About-me">
 			<h2>About me:</h2>			
-		<img id="my-img "   src="images/foto.jpg" alt="My picture" width="30%" align="right"/>
+		<img id="my-img "   src="images/foto.jpg" alt="My picture" width="30%" align="right" padding: 10px/>
 			<p>I am currently a short term researcher and lecturer at the Eberly College of Science, Department of Mathematics, Penn State University, starting in August 2022 until December 2022.</p>
 			<p>
 			I obtained my Ph.D. at Università di Roma Tre under the supervision of professor <a href="https://www1.mat.uniroma1.it/people/fiorenza/" target="_blank">Domenico Fiorenza</a>.
