--- a/index.html
+++ b/index.html
@@ -153,13 +153,12 @@
 		<section id="Invited-Talks">
 			<h2>Invited Talks:</h2>
 			<ul>
-				<li>18/03/2021: The Witten genus as the "volume" of the double loop space, <a href="https://www.ucl.ac.uk/junior-geometry/2021_03_18.html" target="_blank">KCL/UCL Junior Geometry seminar</a>;</li>
-				<li>19/04/2022: Equivariant localization methods, orientations and modularity, <a href="https://math-cal.cloud.science.psu.edu/events/52949" target="_blank">GAP (Geometry, Algebra, Physics) Seminar</a>;				</li>
-				<li>10/05/2022: Lecture on Model Categories, Preparatory informal seminar on the Geometric Cobordism Hypothesis;</li>
+	<li>18/03/2021: The Witten genus as the "volume" of the double loop space, <a href="https://www.ucl.ac.uk/junior-geometry/2021_03_18.html" target="_blank">KCL/UCL Junior Geometry seminar</a>;</li>
+	<li>19/04/2022: Equivariant localization methods, orientations and modularity, <a href="https://math-cal.cloud.science.psu.edu/events/52949" target="_blank">GAP (Geometry, Algebra, Physics) Seminar</a>;				</li>
+	<li>10/05/2022: Lecture on Model Categories, Preparatory informal seminar on the Geometric Cobordism Hypothesis;</li>
         <li>26/05/2022: Equivariant localization methods, orientations and modularity, <a href="https://www.100umi800unipd.it/" target="_blank">First UMI meeting of PhD students. Padova</a>;</li>
-				<li>13/10/2022: String bordism invariants in dimension 3 from U(1)-valued TQFTs, <a href="https://www.birs.ca/events/2022/5-day-workshops/22w5045" target="_blank">Cobordisms, Strings, and Thom Spectra. Oaxaca</a>;</li>
-<li>04/11/2022: • Breve Seminario sugli Spettri (A Short Talk on Spectra), Lecture Series on Cyclic Homology. Rome - Tor Vergata, online.
-</li>
+	<li>13/10/2022: String bordism invariants in dimension 3 from U(1)-valued TQFTs, <a href="https://www.birs.ca/events/2022/5-day-workshops/22w5045" target="_blank">Cobordisms, Strings, and Thom Spectra. Oaxaca</a>;</li>
+	<li>04/11/2022: Breve Seminario sugli Spettri (A Short Talk on Spectra), Lecture Series on Cyclic Homology. Rome - Tor Vergata, online.</li>
 			</ul>
 		</section>
 <section id="teaching">
