--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
         <li>26/05/2022: Equivariant localization methods, orientations and modularity, <a href="https://www.100umi800unipd.it/" target="_blank">First UMI meeting of PhD students. Padova</a> - In Person;</li>
 	<li>13/10/2022: String bordism invariants in dimension 3 from U(1)-valued TQFTs, <a href="https://www.birs.ca/events/2022/5-day-workshops/22w5045" target="_blank">Cobordisms, Strings, and Thom Spectra. Oaxaca</a> - Online;</li>
 	<li>04/11/2022: Breve Seminario sugli Spettri (A Short Talk on Spectra), Lecture Series on Cyclic Homology. Rome - Tor Vergata - Online;</li>
-	<li>09/11/2022: The Topological Half of the Grothendieck-Hirzebruch-Riemann-Roch Theorem, <a href="https://calendar.math.cas.cz/content/topological-half-grothendieck-hirzebruch-riemann-roch-theorem" target="_blank">Cohomology in algebra, geometry, physics and statistics. Prague</a> - Online.</li>
-	<li>01/12/2022: The Topological Half of the Grothendieck-Hirzebruch-Riemann-Roch Theorem, <a href="https://personal.psu.edu/mps16/2022_PSU_workshop.html#landi" target="_blank">Workshop on “Higher Structures” at Penn State. Pennsylvania State University</a> - In Person.</li>
-	<li>06/12/2022: String bordism invariants in dimension 3 from U(1)-valued TQFTs, <a href="https://math-cal.cloud.science.psu.edu/events/57491" target="_blank">GAP (Geometry, Algebra, Physics) Seminar</a> - In Person;</li>
+	<li>09/11/2022: The Topological Half of the Grothendieck-Hirzebruch-Riemann-Roch Theorem, <a href="https://calendar.math.cas.cz/content/topological-half-grothendieck-hirzebruch-riemann-roch-theorem" target="_blank">Cohomology in algebra, geometry, physics and statistics. Prague</a> - Online;</li>
+	<li>01/12/2022: The Topological Half of the Grothendieck-Hirzebruch-Riemann-Roch Theorem, <a href="https://personal.psu.edu/mps16/2022_PSU_workshop.html#landi" target="_blank">Workshop on “Higher Structures” at Penn State. Pennsylvania State University</a> - In Person;</li>
+	<li>06/12/2022: String bordism invariants in dimension 3 from U(1)-valued TQFTs, <a href="https://math-cal.cloud.science.psu.edu/events/57491" target="_blank">GAP (Geometry, Algebra, Physics) Seminar</a> - In Person.</li>
 			</ul>
 		</section>
 <section id="teaching">
