--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 			
 		h1 {
 		font-size: 40.0pt;
-			font-weight: 300;
+		font-weight: 300;
+		margin-top: 0.4em;
+  		margin-bottom: 0.4em;
 		}
 			
 		ul {
