--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
 		<section id="About-me">
 			<h2>About me:</h2>			
 		<img id="my-img "; src="images/foto.jpg"; alt="My picture"; width="30%"; align="right"; style="padding:0px 0px 10px 10px"/>
-			<p>I am currently a short term researcher and lecturer at the Eberly College of Science, Department of Mathematics, Penn State University, starting in August 2022 until December 2022.</p>
+			<p>I am currently a postdoc at Università degli studi di Roma - La Sapienza, starting in June 2023.</p>
 			<p>
-			I obtained my Ph.D. at Università di Roma Tre under the supervision of professor <a href="https://www1.mat.uniroma1.it/people/fiorenza/" target="_blank">Domenico Fiorenza</a>.
+			I obtained my Ph.D. in mathematics at Università di Roma Tre under the supervision of professor <a href="https://www1.mat.uniroma1.it/people/fiorenza/" target="_blank">Domenico Fiorenza</a>.
 			<br>
        			My research interests are algebraic topology and higher category theory.
 			<br>
