--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <p>
         You can email me at:
         <br>
-        <a href="mailto:eugenio.landi@uniroma3.it">eugenio.landi@uniroma3.it</a> or <a href="mailto:ezl5469@psu.edu">ezl5469@psu.edu</a>.
+        <a href="mailto:eugeniolandi@uniroma1.it">eugeniolandi@uniroma1.it</a>.
 
       </p>
 			<p>
