--- a/index.html
+++ b/index.html
@@ -133,12 +133,11 @@
 			
       <p>
         You can email me at:
-        <br>
         <a href="mailto:eugeniolandi@uniroma1.it">eugeniolandi@uniroma1.it</a>.
 
       </p>
 			<p>
-			My <a href="CV_EugenioLandi.pdf" target="_blank">Curriculum Vitae</a>.
+			My <a href="CV_EugenioLandi.pdf" target="_blank">Curriculum Vitae</a>.<br>
 			My <a href="https://arxiv.org/a/landi_e_1.html" target="_blank">papers on the ArXiv</a>.<br>
 			My <a href="https://orcid.org/0000-0002-4041-8749" target="_blank">ORCID profile</a>.<br>
 			My <a href="https://scholar.google.com/citations?user=hU5mH94AAAAJ" target="_blank">Google Scholar profile</a>.
