--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 			
       <p>
         You can email me at:
-        <a href="mailto:eugeniolandi@uniroma1.it">eugeniolandi@uniroma1.it</a>.
+        <a href="mailto:eugenio.landi@uniroma1.it">eugenio.landi@uniroma1.it</a>.
 
       </p>
 			<p>
