--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<meta name="keywords" content="Eugenio, Landi, Math, algebraic topology">
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<meta name="google-site-verification" content="kb4Hsut63eAqSccZE0GE7ZVtHP64Fm-obTuqbjkoPNo" />
-		<link rel="icon" type="image/x-icon" href="/images/icon.ico">
+		<link rel="icon" type="image/x-icon" href="/images/icon1.ico">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
