--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <li>An exposition of the topological half of the Grothendieck-Hirzebruch-Riemann-Roch theorem in the fancy language of spectra<br>(with Mattia Coloma and Domenico Fiorenza) Expo. Math. <a href="https://doi.org/10.1016/j.exmath.2021.11.003" target="_blank">[DOI]</a> <a href="https://arxiv.org/abs/1911.12035" target="_blank">[arXiv]</a></li>
          <li>A very short note on the (rational) graded Hori map<br>(with Mattia Coloma and Domenico Fiorenza) Commun. Algebra <a href="https://doi.org/10.1080/00927872.2021.2005076" target="_blank">[DOI]</a> <a href="https://arxiv.org/abs/2003.13066" target="_blank">[arXiv]</a></li>
          <li>The (anti-)holomorphic sector in C/Λ-equivariant cohomology, and the Witten class<br>(with Mattia Coloma and Domenico Fiorenza) J. Geom. Phys. <a href="https://doi.org/10.1016/j.geomphys.2023.104750" target="_blank">[DOI]</a> <a href="https://arxiv.org/abs/2106.14945" target="_blank">[arXiv]</a> </li>
-         <li>Integrals detecting degree 3 string cobordism classes<br>(with Domenico Fiorenza)<a href="https://arxiv.org/abs/2209.12933" target="_blank">[arXiv]</a> </li>
+         <li>Integrals detecting degree 3 string cobordism classes<br>(with Domenico Fiorenza) Boll. Unione Mat. Ital. <a href="https://doi.org/10.1007/s40574-023-00378-4" target="_blank">[DOI]</a> <a href="https://arxiv.org/abs/2209.12933" target="_blank">[arXiv]</a> </li>
 			</ul>
 		</section>
 		<br>
