--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@
 	<li>09/11/2022: The Topological Half of the Grothendieck-Hirzebruch-Riemann-Roch Theorem, <a href="https://calendar.math.cas.cz/content/topological-half-grothendieck-hirzebruch-riemann-roch-theorem" target="_blank">Cohomology in algebra, geometry, physics and statistics. Prague</a> - Online;</li>
 	<li>01/12/2022: The Topological Half of the Grothendieck-Hirzebruch-Riemann-Roch Theorem, <a href="https://personal.psu.edu/mps16/2022_PSU_workshop.html#landi" target="_blank">Workshop on “Higher Structures” at Penn State. Pennsylvania State University</a> - In Person;</li>
 	<li>06/12/2022: String bordism invariants in dimension 3 from U(1)-valued TQFTs, <a href="https://math-cal.cloud.science.psu.edu/events/57491" target="_blank">GAP (Geometry, Algebra, Physics) Seminar. Pennsylvania State University</a> - In Person.</li>
-	<li>17/08/2023: String bordism invariants in dimension 3 from U(1)-valued TQFTs, <a href="https://homepages.uni-regensburg.de/~lum63364/ConferenceFFT/index.html" target="_blank">Higher Structures in Functorial Field Theory. Regensburg</a> - In Person.</li>			
+	<li>17/08/2023: String bordism invariants in dimension 3 from U(1)-valued TQFTs, <a href="https://homepages.uni-regensburg.de/~lum63364/ConferenceFFT/index.html" target="_blank">Higher Structures in Functorial Field Theory. Regensburg</a> - In Person.</li>	
+	<li>10/12/2024: Wrong-way maps in Cyclic Homology, <a href="https://math-cal.cloud.science.psu.edu/events/74561" target="_blank">GAP (Geometry, Algebra, Physics) Seminar. Pennsylvania State University</a> - In Person.</li>
 			</ul>
 		</section>
 <section id="teaching">
