Update and rename teaching.html to homotopy.html

--- a/homotopy.html
+++ b/homotopy.html
@@ -111,7 +111,7 @@
 
 		<br>
 		<section id="Teaching">
-			<h2>Teaching:</h2>			
+			<h2>Model Categories and Abstract Homotopy Theory:</h2>			
 		Page under construction.
 	</body>
 </html>
