--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 			<br>
         		For my Ph.D. thesis, titled "Equivariant localization methods, orientations and modularity", I worked on orientations, T-duality, rational homotopy theory, TQFTs and equivariant cohomology.
 			</p>
-			
+			<p> During the first half of 2026 I will hold a course on "Model Categories and Abstract Homotopy Theory". For more info see <a href="https://eugeniolandi.github.io/homotopy" target="_blank">here</a>.
       <p>
         You can email me at:
         <a href="mailto:eugenio.landi@uniroma1.it">eugenio.landi@uniroma1.it</a>.
