--- a/homotopy.html
+++ b/homotopy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Teaching</title>
+		<title>Model Categories and Abstract Homotopy Theory</title>
 		<meta name="author" content="Eugenio Landi"/>
 		<meta name="description" content="This is Eugenio Landi's personal webpage."/>
 		<meta name="keywords" content="Eugenio, Landi, Math, algebraic topology">
